--- a/style/main.css
+++ b/style/main.css
@@ -3,24 +3,17 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins';
+    font-family: 'Poppins', serif;
 }
 
 body {
-    background-color:#4A235A ;
+    height: 100vh;
+    background-image: linear-gradient(#9967AE, #72348C);
     animation: fadeIn 2s ease;
+    cursor: default;
 }
 
-.wrapper {
-    z-index: -100;
-    position: absolute;
-    background-image: url(https://stavarachl.github.io/assets/background/background.png);
-    width: 100%;
-    height: 100%;
-    background-position: center center;
-    background-size: cover;
-    filter: blur(3px);
-}
+
 
 @keyframes fadeIn {
     0% {
@@ -31,3 +24,10 @@ body {
     }
 }
 
+
+@media(max-width: 500px) {
+    #myLogo {
+        display: none;
+    }
+
+}
