--- a/style/tittle.css
+++ b/style/tittle.css
@@ -8,7 +8,6 @@
 .tittle h1 {
     font-size: 8rem;
     padding-bottom: 15px;
-    animation: fadeInTitle 3s ease;
 }
 
 @media (max-height: 700px) {
@@ -31,14 +30,13 @@
 
 }
 
-@keyframes fadeInTitle {
-    0% {
-        opacity: 0;
-        padding-right: 200px;
-    }
-
-    100% {
-        opacity: 1;
-        padding-right: 0;
-    }
+#particles-js{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url('');
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    z-index: -100;
 }
