--- a/style/navbar.css
+++ b/style/navbar.css
@@ -1,6 +1,5 @@
 .navbar {
     display: flex;
-    padding: 20px;
     align-items: center;
     justify-content: center;
     z-index: 20;
@@ -17,10 +16,10 @@
 
 .navbar ul {
     display: flex;
-    background-color:#9354AE ;
+    background-color:#D05245 ;
     padding-left: 20px;
     padding-top: 10px;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
     padding-bottom: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -41,8 +40,8 @@
 }
 
 .navbar ul li a:hover {
-    background-color: #A357C3;
-    color: #D2B4DE;
+    background-color: #CD3F30;
+    color: #E07165;
 }
 
 .navImg:hover {
