--- a/style/tittle.css
+++ b/style/tittle.css
@@ -25,7 +25,7 @@
 
 @media(max-width: 500px) {
     .tittle h1 {
-        font-size: 3rem;
+        font-size: 4rem;
     }
 
 }
@@ -34,7 +34,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url('');
+    background-image: url('../assets/alena-aenami-dawn.jpg');
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
