--- a/style/tittle.css
+++ b/style/tittle.css
@@ -36,7 +36,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url('https://cdnb.artstation.com/p/assets/images/images/009/312/021/large/alena-aenami-aenami-lunar.jpg?1518269866');
+    background-image: url('https://cdnb.artstation.com/p/assets/images/images/009/312/021/large/unknown-dark-mojave-desert.jpg?');
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
